# biotracker_v4

./: .gitignore  Cargo.toml  README.md  build.rs  test.py
benches/: shared_memory.rs
distribution/: test.json
distribution/sleap/: README.md  requirements.txt  setup.sh  sleap_config.json
package/: Dockerfile  build_appimage.sh
package/resources/: biotracker4.desktop
protocol/: experiment.proto  message.proto  tracking.proto  video.proto
pytracker/: __init__.py  generate_protobuf.sh  noop_tracker.py  robofish_commander.py  robofish_io.py  sleap_detector.py  sleap_to_savedmodel.py  sleap_tracker.py  sort_matcher.py  sort_tracker.py  test_detector.py
pytracker/biotracker/: __init__.py  message_bus.py  protocol.py  shared_image.py
src/: gui.rs  main.rs  util.rs  window.rs
src/benches/: message.rs
src/biotracker/: arena.rs  biotracker.rs  channel.rs  cli.rs  component.rs  config.rs  decoder.rs  encoder.rs  features.rs  logger.rs  matcher.rs  metric.rs  metrics_recorder.rs  mod.rs  observer.rs  port.rs  protocol.rs  python_process.rs  robofish_commander.rs  service.rs  shared_buffer.rs  state.rs  tracking.rs  undistort.rs
src/components/: biotracker.rs  config.rs  decoder.rs  encoder.rs  matcher.rs  mod.rs  python_runner.rs  sampler.rs  tracker.rs
src/core/: biotracker.rs  cli.rs  component.rs  matching.rs  message_bus.rs  mod.rs  protocol.rs  sampler.rs  shared_buffer.rs  tracker.rs  video.rs
src/lib/: cli.rs  component.rs  lib.rs  message_bus.rs  protocol.rs  shared_buffer.rs
src/ui/: annotated_video.rs  annotator.rs  app.rs  camera_button.rs  color.rs  component_config.rs  controller.rs  entity_dropdown.rs  entity_switcher.rs  log.rs  metrics.rs  mod.rs  offscreen_renderer.rs  polygon.rs  record_button.rs  rectification.rs  settings.rs  side_panel.rs  texture.rs  texture_image.rs  video_plane.rs  window_menu.rs
src/video/: mod.rs  sampler.rs
