[package]
name = "biotracker4"
version = "0.1.0"
authors = ["Max Breitenfeldt <git@mxbr.me>"]
edition = "2021"

[dependencies]
# egui
egui = { git = "https://github.com/emilk/egui", rev="0eabd894bd0e4466d53e3098e8cce1f10183f3b0" }
egui-wgpu = { git = "https://github.com/emilk/egui", rev="0eabd894bd0e4466d53e3098e8cce1f10183f3b0" }
eframe= { git = "https://github.com/emilk/egui", rev="0eabd894bd0e4466d53e3098e8cce1f10183f3b0", features=["wgpu"], default-features = false }
rfd = "0.10"

# message protocol
shared_memory = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.11"
tonic = "0.8.3"
tokio = { version = "1.4.0", features = ["rt", "macros", "time"] }

# other
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
pathfinding = "3.0"
rand = "0.8"
cv = { package= "opencv", version="0.75", default-features = false, features = ["imgproc", "videoio"] }
pylon-cxx = { version = "0.3.4", optional = true }
bytemuck = "1.13.0"

[build-dependencies]
tonic-build = "0.8.4"

[features]
pylon = ["dep:pylon-cxx"]
