[package]
name = "biotracker4"
version = "0.1.0"
authors = ["Max Breitenfeldt <git@mxbr.me>"]
edition = "2021"

[dependencies]
# egui
egui = "0.21.0"
egui-wgpu = "0.21.0"
egui_extras = "0.21.0"
eframe= { version="0.21.3", features=["wgpu"], default-features = false }
rfd = "0.10"

# message protocol
shared_memory = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.11"
tonic = "0.8.3"
tokio = { version = "1.4.0", features = ["rt", "macros", "time", "process"] }

# other
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
pathfinding = "3.0"
rand = "0.8"
cv = { package= "opencv", version="0.77", default-features = false, features = ["imgproc", "videoio", "calib3d"] }
pylon-cxx = { version = "0.3.4", optional = true }
bytemuck = "1.13.0"
chrono = "0.4.23"
log = { version="0.4.17", features=["std"] }
futures = "0.3.26"
metrics = "0.21.0"
metrics-util = "0.15.0"

[build-dependencies]
tonic-build = "0.8.4"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "shared_memory"
harness = false

[features]
pylon = ["dep:pylon-cxx"]
